--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.5",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.3",
@@ -48,6 +49,8 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "ts-node": "^10.9.1"
+    "file-loader": "^6.2.0",
+    "ts-node": "^10.9.1",
+    "url-loader": "^4.1.1"
   }
 }
