--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.0",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.4.2",
     "@types/styled-components": "^5.1.26",
     "file-loader": "^6.2.0",
     "ts-node": "^10.9.1",
