--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "apexcharts": "^3.36.0",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
