--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-notifications-component": "^3.1.1",
     "apexcharts": "^3.36.0",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
@@ -19,6 +20,8 @@
     "react-apexcharts": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-notifications": "^1.7.4",
+    "react-notifications-component": "^3.0.2",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
