--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^3.36.0",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "framer-motion": "^7.6.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -24,6 +25,7 @@
     "react-notifications": "^1.7.4",
     "react-notifications-component": "^3.0.2",
     "react-paginate": "^8.1.4",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
